<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_firebase_database"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context="com.reve.firebaseexample.activity.FirebaseDatabaseActivity">

    <EditText
        android:id="@+id/edit_text_database_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"/>
    <EditText
        android:id="@+id/edit_text_database_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_age"
        android:inputType="number"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/button_save_to_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/save_to_database"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button_show_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/show_data"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"/>
</LinearLayout>
