<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context="com.reve.firebaseexample.activity.SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/edit_text_signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_username"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/edit_text_signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/signup"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark"/>

    <TextView
        android:id="@+id/text_view_redirect_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="end"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="17sp"/>
</LinearLayout>
