<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_firebase_storage_example"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context="com.reve.firebaseexample.activity.FirebaseStorageExample">

    <ImageView
        android:id="@+id/image_view_browse"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/content_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/text_view_showing_path"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".75" />
        <Button
            android:id="@+id/button_browse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:text="@string/browse"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/upload"/>

</LinearLayout>
